# geonames_addr_generator

./: .coverage  pyproject.toml
src/geonames_addr/: __init__.py  downloader.py  locator.py
tests/: conftest.py  test_downloader.py  test_locator.py
