[project]
name = "geonames-addr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ace Greathouse", email = "acegreathouse75@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.1",
]

[project.scripts]
geonames-addr = "geonames_addr:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term"
